--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "netlify-express",
+  "name": "express-github-stats-card-demo",
   "version": "0.0.1",
-  "description": "Example of how to deploy a Express.js Netlify app.",
+  "description": "Demo app for express-github-stats-card NPM package. (scaffolding cloned from https://github.com/neverendings/netlify-express.git)",
   "main": "functions/server.js",
   "scripts": {
     "build": "netlify-lambda build express",
@@ -9,18 +9,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/neverendingqs/netlify-express.git"
+    "url": "https://github.com/cnocon/express-github-stats-card-demo.git"
   },
   "keywords": [
     "netlify",
-    "express.js"
+    "express.js",
+    "GitHub",
+    "GitHub stats",
+    "GitHub statistics",
+    "GitHub user",
+    "Stats card",
+    "Card",
+    "NPM"
   ],
-  "author": "neverendingqs",
-  "license": "Apache-2.0",
+  "author": "Cristin O'Connor <her@cristin.io>",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/neverendingqs/netlify-express/issues"
+    "url": "https://github.com/cnocon/express-github-stats-card-demo/issues"
   },
-  "homepage": "https://github.com/neverendingqs/netlify-express#readme",
+  "homepage": "https://github.com/cnocon/express-github-stats-card-demo#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express-github-stats-card": "^1.0.2"
